# building-a-dynamodb-powered-pokemon-api-with-cdk

./: .gitignore  README.md
crates/pokemon-api/: Cargo.toml
crates/pokemon-api/src/: main.rs
crates/upload-pokemon-data/: Cargo.toml  pokemon.csv
crates/upload-pokemon-data/src/: main.rs
infra/: cdk.json  package-lock.json  package.json  sample-payload.json
infra/lib/: infra-stack.js
