[package]
name = "upload-pokemon-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
aws-config = "0.9.0"
aws-sdk-dynamodb = "0.9.0"
color-eyre = "0.6.1"
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
